// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChartScreenReaderTable > draws a complete table with missing data 1`] = `
"<table class="sr-only" id="my-chart">
  <caption>Spotty data</caption>
  <thead>
    <tr>
      <!--v-if-->
      <th>1</th>
      <th>2</th>
      <th>3</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>A</td>
      <td>B</td>
      <td></td>
    </tr>
  </tbody>
</table>"
`;

exports[`ChartScreenReaderTable > draws a complete table with row headers and missing data 1`] = `
"<table class="sr-only" id="my-chart">
  <caption>Spotty data</caption>
  <thead>
    <tr>
      <td></td>
      <th>1</th>
      <th>2</th>
      <th>3</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>A</th>
      <td>1A</td>
      <td>2B</td>
      <td></td>
    </tr>
    <tr>
      <th>B</th>
      <td>1A</td>
      <td>2B</td>
      <td>3C</td>
    </tr>
    <tr>
      <th>C</th>
      <td></td>
      <td></td>
      <td></td>
    </tr>
    <tr>
      <th>D</th>
      <td></td>
      <td></td>
      <td></td>
    </tr>
  </tbody>
</table>"
`;

exports[`ChartScreenReaderTable > mounts 1`] = `
"<table class="sr-only" id="my-chart">
  <caption>Amount of veggies</caption>
  <thead>
    <tr>
      <!--v-if-->
      <th>Grains</th>
      <th>Vegetables</th>
      <th>Roots &amp; Bulbs</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>1</td>
      <td>2</td>
      <td>3</td>
    </tr>
  </tbody>
</table>"
`;

exports[`ChartScreenReaderTable > mounts with row headers 1`] = `
"<table class="sr-only" id="my-chart">
  <caption>Amount of veggies</caption>
  <thead>
    <tr>
      <td></td>
      <th>Fruits</th>
      <th>Grains</th>
      <th>Leafy Greens</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>Week 1</th>
      <td>1</td>
      <td>2</td>
      <td>3</td>
    </tr>
    <tr>
      <th>Week 2</th>
      <td>1</td>
      <td>1</td>
      <td>2</td>
    </tr>
    <tr>
      <th>Week 3</th>
      <td>3</td>
      <td>3</td>
      <td>0</td>
    </tr>
  </tbody>
</table>"
`;
